<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
   <LinearLayout
       android:orientation="vertical"
       android:paddingVertical="16dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <TextView
           android:layout_marginHorizontal="16dp"
           android:textSize="20dp"
           android:text="Chat Bot"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
       <RadioGroup
           android:id="@+id/ac_rg_bot"
           android:layout_marginHorizontal="16dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <RadioButton
               android:id="@+id/ac_rb_bot_vishwakosh"
               android:text="@string/bot_vishwakosh"
               android:paddingHorizontal="16dp"
               android:paddingVertical="8dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
           <RadioButton
               android:id="@+id/ac_rb_bot_ssc_science"
               android:text="@string/bot_ssc_science"
               android:paddingHorizontal="16dp"
               android:paddingVertical="8dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
           <RadioButton
               android:id="@+id/ac_rb_bot_ssc_history"
               android:text="@string/bot_ssc_history"
               android:paddingHorizontal="16dp"
               android:paddingVertical="8dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
       </RadioGroup>
       <View
           android:background="@color/light_gray"
           android:layout_marginHorizontal="16dp"
           android:layout_marginVertical="8dp"
           android:layout_width="match_parent"
           android:layout_height="0.5dp"/>
       <TextView
           android:layout_marginHorizontal="16dp"
           android:textSize="20dp"
           android:text="Language"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
       <RadioGroup
           android:id="@+id/ac_rg_lang"
           android:layout_marginHorizontal="16dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <RadioButton
               android:id="@+id/ac_rb_lang_same"
               android:text="@string/lang_same"
               android:paddingHorizontal="16dp"
               android:paddingVertical="8dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
           <RadioButton
               android:id="@+id/ac_rb_lang_english"
               android:text="@string/lang_english"
               android:paddingHorizontal="16dp"
               android:paddingVertical="8dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
           <RadioButton
               android:id="@+id/ac_rb_lang_marathi"
               android:text="@string/lang_marathi"
               android:paddingHorizontal="16dp"
               android:paddingVertical="8dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
           <RadioButton
               android:id="@+id/ac_rb_lang_hindi"
               android:text="@string/lang_hindi"
               android:paddingHorizontal="16dp"
               android:paddingVertical="8dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
       </RadioGroup>
   </LinearLayout>
</ScrollView>